==> SmingHub/Sming/Sming/Arch/Esp32/Components/driver/uart.cpp <==
#include <BitManipulations.h>
#include "include/driver/uart.h"
#include "espinc/uart_register.h"
#include "espinc/pin_mux_register.h"
#include <esp32/rom/ets_sys.h>
#include <soc/dport_access.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_system.h"
#include "SerialBuffer.h"
#include "esp_log.h"
#define RX_FIFO_FULL_THRESHOLD 120									  ///< UIFF interrupt when FIFO bytes > threshold
#define RX_FIFO_HEADROOM (UART_RX_FIFO_SIZE - RX_FIFO_FULL_THRESHOLD) ///< Chars between UIFF and UIOF
#define DEFAULT_RX_HEADROOM (32 - RX_FIFO_HEADROOM)

size_t smg_uart_read(smg_uart_t* uart, void* buffer, size_t size)
{
	if(!smg_uart_rx_enabled(uart) || buffer == nullptr || size == 0) {
		return 0;
	}

	notify(uart, UART_NOTIFY_BEFORE_READ);

	size_t read = 0;

	auto buf = static_cast<uint8_t*>(buffer);

	// First read data from RX buffer if in use
	if(uart->rx_buffer != nullptr) {
		while(read < size && !uart->rx_buffer->isEmpty())
			buf[read++] = uart->rx_buffer->readChar();
	}

	// Top up from hardware FIFO
	if(is_physical(uart)) {
		if(read < size) {
			int received = uart_read_bytes(uart->uart_nr, &buf[read], (size - read), 0);
			if(received > 0) {
				read += received;
			}
		}
	}

	return read;
}

size_t smg_uart_write(smg_uart_t* uart, const void* buffer, size_t size)
{
	if(!smg_uart_tx_enabled(uart) || buffer == nullptr || size == 0) {
		return 0;
	}

	size_t written = 0;

	auto buf = static_cast<const uint8_t*>(buffer);

	bool isPhysical = is_physical(uart);

	while(written < size) {
		if(isPhysical) {
			// If TX buffer not in use or it's empty then write directly to hardware FIFO
			if(uart->tx_buffer == nullptr || uart->tx_buffer->isEmpty()) {
				int sent = uart_write_bytes(uart->uart_nr, (const char* )&buf[written], (size - written));
				if(sent > 0) {
					written += sent;
				}
			}
		}

		// Write any remaining data into transmit buffer
		if(uart->tx_buffer != nullptr) {
			while(written < size && uart->tx_buffer->writeChar(buf[written])) {
				++written;
			}
		}

		notify(uart, UART_NOTIFY_AFTER_WRITE);

		if(!bitRead(uart->options, UART_OPT_TXWAIT)) {
			break;
		}
	}

	return written;
}

void smg_uart_wait_tx_empty(smg_uart_t* uart)
{
	uart = get_physical(uart);
	if(uart == nullptr) {
		return;
	}

	uart_wait_tx_done(uart->uart_nr, portMAX_DELAY);
}

uint32_t smg_uart_set_baudrate_reg(int uart_nr, uint32_t baud_rate)
{
	if(!is_physical(uart_nr) || baud_rate == 0) {
		return 0;
	}

	uart_set_baudrate((uart_port_t)uart_nr, baud_rate);

	return baud_rate;
}

smg_uart_t* smg_uart_init_ex(const smg_uart_config& cfg)
{
	//Set UART log level
	esp_log_level_set(TAG, ESP_LOG_INFO);


	// Already initialised?
	if(smg_uart_get_uart(cfg.uart_nr) != nullptr) {
		return nullptr;
	}

	auto uart = new smg_uart_t;
	if(uart == nullptr) {
		return nullptr;
	}

	memset(uart, 0, sizeof(smg_uart_t));
	uart->uart_nr = (uart_port_t)cfg.uart_nr;
	uart->mode = cfg.mode;
	uart->options = cfg.options;
	uart->tx_pin = 255;
	uart->rx_pin = 255;
	uart->rx_headroom = DEFAULT_RX_HEADROOM;

	uart_config_t uart_config = {
	        .baud_rate = (int)cfg.baudrate,
	        .data_bits = UART_DATA_8_BITS,
	        .parity    = UART_PARITY_DISABLE,
	        .stop_bits = UART_STOP_BITS_1,
	        .flow_ctrl = UART_HW_FLOWCTRL_DISABLE
	};

	if(!realloc_buffer(uart->rx_buffer, cfg.rx_size)) {
		delete uart;
		return nullptr;
	}

	if(!realloc_buffer(uart->tx_buffer, cfg.tx_size)) {
		delete uart;
		return nullptr;
	}

	uart_port_t port = (uart_port_t)cfg.uart_nr;
	uart_param_config(port, &uart_config);
	uart_set_pin(port, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);

	uart_driver_install(port, cfg.rx_size, cfg.tx_size, 20, &uartQueues[cfg.uart_nr], 0);

	uartInstances[cfg.uart_nr] = uart;

    //Create a task to handle UART event from ISR
	doneHandler[uart->uart_nr] = false;
    xTaskCreate(smg_uart_event_task, "uart_event_task", 2048, &uart->uart_nr, 12, NULL);

	notify(uart, UART_NOTIFY_AFTER_OPEN);

	return uart;
}

void smg_uart_uninit(smg_uart_t* uart)
{
	if(uart == nullptr) {
		return;
	}

	notify(uart, UART_NOTIFY_BEFORE_CLOSE);

	// If debug output being sent to this UART, disable it
	if(uart->uart_nr == s_uart_debug_nr) {
		smg_uart_set_debug(UART_NO);
	}

	doneHandler[uart->uart_nr] = true;
	uart_driver_delete(uart->uart_nr);

	uartInstances[uart->uart_nr] = nullptr;

	delete uart->rx_buffer;
	delete uart->tx_buffer;
	delete uart;
}

smg_uart_t* smg_uart_init(uint8_t uart_nr, uint32_t baudrate, uint32_t config, smg_uart_mode_t mode, uint8_t tx_pin, size_t rx_size,
				  size_t tx_size)
{
	smg_uart_config cfg = {.uart_nr = (uart_port_t)uart_nr,
					   .tx_pin = tx_pin,
					   .mode = mode,
					   .options = _BV(UART_OPT_TXWAIT),
					   .baudrate = baudrate,
					   .config = config,
					   .rx_size = rx_size,
					   .tx_size = tx_size};
	return smg_uart_init_ex(cfg);
}

void smg_uart_set_pins(smg_uart_t* uart, int tx, int rx)
{
	if(uart == nullptr) {
		return;
	}

	uart_set_pin(uart->uart_nr, tx, rx, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
}
