==> SmingHub/Sming/Sming/Arch/Rp2040/Components/driver/uart.cpp <==
#include <BitManipulations.h>
#include <driver/uart.h>
#include <driver/SerialBuffer.h>
#include <pico.h>
#include <hardware/structs/uart.h>
#include <hardware/clocks.h>
#include <hardware/irq.h>
#include <hardware/resets.h>
#include <hardware/gpio.h>
#define UART0_PIN_DEFAULT PICO_DEFAULT_UART_TX_PIN, PICO_DEFAULT_UART_RX_PIN
#define UART1_PIN_DEFAULT 4, 5

size_t smg_uart_read(smg_uart_t* uart, void* buffer, size_t size)
{
	if(!smg_uart_rx_enabled(uart) || buffer == nullptr || size == 0) {
		return 0;
	}

	notify(uart, UART_NOTIFY_BEFORE_READ);

	size_t read = 0;

	auto buf = static_cast<uint8_t*>(buffer);

	// First read data from RX buffer if in use
	if(uart->rx_buffer != nullptr) {
		while(read < size && !uart->rx_buffer->isEmpty())
			buf[read++] = uart->rx_buffer->readChar();
	}

	// Top up from hardware FIFO
	auto dev = getDevice(uart->uart_nr);
	while(read < size && !uart_rxfifo_empty(dev)) {
		uint8_t c = dev->dr;
		buf[read++] = c;
	}

	// FIFO full may have been disabled if buffer overflowed, re-enabled it now
	dev->icr = UART_UARTMIS_RXMIS_BITS | UART_UARTMIS_RTMIS_BITS | UART_UARTMIS_OEMIS_BITS;
	hw_set_bits(&dev->imsc, UART_UARTIMSC_RXIM_BITS | UART_UARTIMSC_RTIM_BITS | UART_UARTIMSC_OEIM_BITS);

	return read;
}

size_t smg_uart_write(smg_uart_t* uart, const void* buffer, size_t size)
{
	if(!smg_uart_tx_enabled(uart) || buffer == nullptr || size == 0) {
		return 0;
	}

	size_t written = 0;

	auto buf = static_cast<const uint8_t*>(buffer);

	while(written < size) {
		// If TX buffer not in use or it's empty then write directly to hardware FIFO
		if(uart->tx_buffer == nullptr || uart->tx_buffer->isEmpty()) {
			auto dev = getDevice(uart->uart_nr);
			while(written < size && !uart_txfifo_full(dev)) {
				dev->dr = buf[written++];
			}

			// Enable TX FIFO EMPTY interrupt
			dev->icr = UART_UARTMIS_TXMIS_BITS;
			hw_set_bits(&dev->imsc, UART_UARTIMSC_TXIM_BITS);
		}

		// Write any remaining data into transmit buffer
		if(uart->tx_buffer != nullptr) {
			while(written < size && uart->tx_buffer->writeChar(buf[written])) {
				++written;
			}
		}

		notify(uart, UART_NOTIFY_AFTER_WRITE);

		if(!bitRead(uart->options, UART_OPT_TXWAIT)) {
			break;
		}
	}

	return written;
}

void smg_uart_wait_tx_empty(smg_uart_t* uart)
{
	if(!smg_uart_tx_enabled(uart)) {
		return;
	}

	notify(uart, UART_NOTIFY_WAIT_TX);

	if(uart->tx_buffer != nullptr) {
		while(!uart->tx_buffer->isEmpty()) {
		}
	}

	auto dev = getDevice(uart->uart_nr);
	while((dev->fr & UART_UARTFR_TXFE_BITS) != 0) {
	}
}

uint32_t smg_uart_set_baudrate_reg(int uart_nr, uint32_t baud_rate)
{
	if(baud_rate == 0) {
		return 0;
	}

	auto clock_hz = clock_get_hz(clk_peri);
	uint32_t baud_rate_div = 8 * clock_hz / baud_rate;
	uint32_t baud_ibrd = baud_rate_div >> 7;
	uint32_t baud_fbrd{0};

	if(baud_ibrd == 0) {
		baud_ibrd = 1;
	} else if(baud_ibrd >= 0xffff) {
		baud_ibrd = 0xffff;
	} else {
		baud_fbrd = ((baud_rate_div & 0x7f) + 1) / 2;
	}

	// Load PL011's baud divisor registers
	auto dev = getDevice(uart_nr);
	dev->ibrd = baud_ibrd;
	dev->fbrd = baud_fbrd;

	// PL011 needs a (dummy) line control register write to latch in the
	// divisors. We don't want to actually change LCR contents here.
	hw_set_bits(&dev->lcr_h, 0);

	// Return the actual baud rate in use
	return 4 * clock_hz / ((64 * baud_ibrd) + baud_fbrd);
}

smg_uart_t* smg_uart_init_ex(const smg_uart_config_t& cfg)
{
	// Already initialised?
	if(cfg.uart_nr >= UART_COUNT || uartInstances[cfg.uart_nr].uart != nullptr) {
		return nullptr;
	}

	auto uart = new smg_uart_t{};
	if(uart == nullptr) {
		return nullptr;
	}

	uart->uart_nr = cfg.uart_nr;
	uart->mode = cfg.mode;
	uart->options = cfg.options;
	uart->tx_pin = uart->rx_pin = UART_PIN_DEFAULT;
	uart->rx_headroom = 16;

	int tx_pin = cfg.tx_pin;
	int rx_pin = cfg.rx_pin;

	auto rxBufferSize = cfg.rx_size;
	auto txBufferSize = cfg.tx_size;

	if(smg_uart_rx_enabled(uart)) {
		if(!realloc_buffer(uart->rx_buffer, rxBufferSize)) {
			delete uart;
			return nullptr;
		}
		rx_pin = (cfg.rx_pin == UART_PIN_DEFAULT) ? defaultPins[cfg.uart_nr].rx : cfg.rx_pin;
	} else {
		rx_pin = UART_PIN_NO_CHANGE;
	}

	if(smg_uart_tx_enabled(uart)) {
		if(!realloc_buffer(uart->tx_buffer, txBufferSize)) {
			delete uart->rx_buffer;
			delete uart;
			return nullptr;
		}
		tx_pin = (tx_pin == UART_PIN_DEFAULT) ? defaultPins[cfg.uart_nr].tx : cfg.tx_pin;
	} else {
		tx_pin = UART_PIN_NO_CHANGE;
	}

	// OK, buffers allocated so setup hardware
	auto reset_bits = (uart->uart_nr == 1) ? RESETS_RESET_UART1_BITS : RESETS_RESET_UART0_BITS;
	reset_block(reset_bits);
	unreset_block_wait(reset_bits);

	smg_uart_detach(cfg.uart_nr);
	smg_uart_set_baudrate(uart, cfg.baudrate);

	auto dev = getDevice(cfg.uart_nr);

	// Setup line control register
	smg_uart_config_format_t fmt;
	fmt.val = cfg.config;
	uint32_t lcr{0};
	lcr |= fmt.bits << UART_UARTLCR_H_WLEN_LSB; // data bits
	if(fmt.stop_bits != UART_NB_STOP_BIT_1) {   // stop bits
		lcr |= UART_UARTLCR_H_STP2_BITS;
	}
	lcr |= fmt.parity << UART_UARTLCR_H_PEN_LSB; // parity
	lcr |= UART_UARTLCR_H_FEN_BITS;				 // Enable FIFOs
	dev->lcr_h = lcr;

	// Enable the UART
	if(uart->mode == UART_TX_ONLY) {
		dev->cr = UART_UARTCR_UARTEN_BITS | UART_UARTCR_TXE_BITS;
	} else if(uart->mode == UART_RX_ONLY) {
		dev->cr = UART_UARTCR_UARTEN_BITS | UART_UARTCR_RXE_BITS;
	} else {
		dev->cr = UART_UARTCR_UARTEN_BITS | UART_UARTCR_TXE_BITS | UART_UARTCR_RXE_BITS;
	}

	// Always enable DREQ signals -- no harm in this if DMA is not listening
	dev->dmacr = UART_UARTDMACR_TXDMAE_BITS | UART_UARTDMACR_RXDMAE_BITS;

	smg_uart_set_pins(uart, tx_pin, rx_pin);

	smg_uart_flush(uart);
	uartInstances[cfg.uart_nr].uart = uart;
	smg_uart_start_isr(uart);

	notify(uart, UART_NOTIFY_AFTER_OPEN);

	return uart;
}

void smg_uart_uninit(smg_uart_t* uart)
{
	if(uart == nullptr) {
		return;
	}

	notify(uart, UART_NOTIFY_BEFORE_CLOSE);

	smg_uart_stop_isr(uart);
	// If debug output being sent to this UART, disable it
	if(uart->uart_nr == s_uart_debug_nr) {
		smg_uart_set_debug(UART_NO);
	}

	auto reset_bits = (uart->uart_nr == 1) ? RESETS_RESET_UART1_BITS : RESETS_RESET_UART0_BITS;
	reset_block(reset_bits);

	uartInstances[uart->uart_nr].uart = nullptr;
	delete uart->rx_buffer;
	delete uart->tx_buffer;
	delete uart;
}

smg_uart_t* smg_uart_init(uint8_t uart_nr, uint32_t baudrate, uint32_t config, smg_uart_mode_t mode, uint8_t tx_pin,
						  size_t rx_size, size_t tx_size)
{
	smg_uart_config_t cfg = {.uart_nr = uart_nr,
							 .tx_pin = tx_pin,
							 .rx_pin = UART_PIN_DEFAULT,
							 .mode = mode,
							 .options = _BV(UART_OPT_TXWAIT),
							 .baudrate = baudrate,
							 .config = config,
							 .rx_size = rx_size,
							 .tx_size = tx_size};
	return smg_uart_init_ex(cfg);
}

bool smg_uart_set_pins(smg_uart_t* uart, int tx_pin, int rx_pin)
{
	if(uart == nullptr) {
		return false;
	}

	// Valid GPIO for UART TX function
	auto is_tx_pin = [&](uint8_t pin) -> bool {
		const uint8_t uart_tx_pins[2][4] = {
			{0, 12, 16, 28},
			{4, 8, 20, 24},
		};
		auto& txpins = uart_tx_pins[uart->uart_nr];
		return pin == txpins[0] || pin == txpins[1] || pin == txpins[2] || pin == txpins[3];
	};
	// UART pins are in groups, RX pins follow TX
	auto is_rx_pin = [&](uint8_t pin) -> bool { return is_tx_pin(pin - 1); };

	if(tx_pin != UART_PIN_NO_CHANGE && !is_tx_pin(tx_pin)) {
		return false;
	}
	if(rx_pin != UART_PIN_NO_CHANGE && !is_rx_pin(rx_pin)) {
		return false;
	}

	if(tx_pin != UART_PIN_NO_CHANGE) {
		if(uart->tx_pin != UART_PIN_DEFAULT) {
			gpio_set_function(uart->tx_pin, GPIO_FUNC_NULL);
		}
		gpio_set_function(tx_pin, GPIO_FUNC_UART);
		uart->tx_pin = tx_pin;
	}

	if(rx_pin != UART_PIN_NO_CHANGE) {
		if(uart->rx_pin != UART_PIN_DEFAULT) {
			gpio_set_function(uart->rx_pin, GPIO_FUNC_NULL);
		}
		gpio_set_function(rx_pin, GPIO_FUNC_UART);
		uart->rx_pin = rx_pin;
	}

	return true;
}
